# arcade-location-scraper

./: BBCH_shop_data.json  BOMBERGIRL_shop_data.json  COLORCOLOTTA4_shop_data.json  COLORCOLOTTA5_shop_data.json  DANEVOAC_shop_data.json  DD_shop_data.json  FTRI_shop_data.json  GCP_shop_data.json  GIHPJM_shop_data.json  GITADORADM_shop_data.json  GIWorldClassic_VR_SD_shop_data.json  GIWorldClassic_shop_data.json  IIDX_LN_shop_data.json  JUBEAT_shop_data.json  MFCU_shop_data.json  PCHARGER_shop_data.json  PMPM_shop_data.json  README.md  SDVX_VM_shop_data.json  SMASTA_shop_data.json  games.py  main.py  merge.py  pyproject.toml  shop_data.json
.github/: dependabot.yml
data/: ANIMAL2_shop_data.json  ANIMAL3_shop_data.json  ANIMAL4_shop_data.json  ANIMAL5_shop_data.json  ANIMAL6_shop_data.json  ANIMAL7_shop_data.json  ANIMAL8_shop_data.json  BOMBER_MEDAL_shop_data.json  BUSOUSHINKI_shop_data.json  CARDCONNECT_R_shop_data.json  CARDCONNECT_shop_data.json  CCJ_shop_data.json  COLORCOLOTTA2_shop_data.json  COLORCOLOTTA6_shop_data.json  COLORCOLOTTA7_shop_data.json  COLORCOLOTTA_shop_data.json  CVM_shop_data.json  DANCEAROUND_shop_data.json  DAN_shop_data.json  DDR20TH_shop_data.json  DDR_shop_data.json  EKEC3_shop_data.json  FEATUREPREMIUM_shop_data.json  FF3_shop_data.json  FTRI2_shop_data.json  FTRI3_shop_data.json  FTRI4_shop_data.json  FTRI5_shop_data.json  GCC_shop_data.json  GIGD_shop_data.json  GIHPGX_STD_shop_data.json  GIHPGX_shop_data.json  GIHPJM_STD_shop_data.json  GITADORADMA_shop_data.json  GITADORAGFA_shop_data.json  GITADORAGF_shop_data.json  (+50 more)
(+7 files in other folders)
