[project]
name = "konami"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"  # 非同期テストを自動検出
